--- a/templates/result.html
+++ b/templates/result.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html>
-   <body>
-       <h1> {{ result }}</h1>
-   </body>
+    <head>
+        <title>Prediction Results</title>
+        <link rel='stylesheet' src='../static/css/style.css'>
+    </head>
+    <body>
+        <p id='result_output' style = background-color:lightblue> {{ result }} </p>
+    </body>
 </html>
