--- a/templates/result.html
+++ b/templates/result.html
@@ -2,7 +2,8 @@
 <html>
     <head>
         <title>Prediction Results</title>
-        <link rel='stylesheet' src='../static/css/style.css'>
+        <link rel='stylesheet' href='../static/css/style.css'>
+        <link rel='stylesheet' href='../static/css/animate.css'
     </head>
     <body>
         <p id='result_output' style = background-color:lightblue> {{ result }} </p>
