changed last input table label

--- a/templates/index.html
+++ b/templates/index.html
@@ -160,7 +160,7 @@
 
 							<div class="form-label-group">
 								<input type="text" id="total_bal_ext_mort" class="form-control" placeholder="Interest Rate" name="total_bal_ext_mort" required autofocus>
-								<label for="total_bal_ext_mort">Interest Rate</label>
+								<label for="total_bal_ext_mort">Total debt balance excluding mortgage</label>
 							</div>
 
 
