--- a/static/css/style.css
+++ b/static/css/style.css
@@ -21,7 +21,7 @@ h3 { font-family: 'Josefin Sans', sans-serif; font-size: 32px; font-weight: 300;
 img { max-width: 100%; }
 
 .bg-image {
-	background-image: (url('/static/images/1.jpg'));
+	background-image: (url('https://images.pexels.com/photos/938965/pexels-photo-938965.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940'));
 	height:250px;
 	background-position: center;
 	opacity:.5;
