--- a/templates/index.html
+++ b/templates/index.html
@@ -58,13 +58,18 @@
 			</div>
 		</nav>
 
-    
-    	<!-- Top content -->
-        <div class="top-content">
+		<!-- Top content -->
+        <!-- <div class="top-content"> -->
+		<div class= "containerer">
+			<img class="img-fluid" src="{{ url_for('static', filename='images/1.jpg') }}" alt="" style="width:100%;">
+			<h1 class="centereder" style="color:rgb(0, 0, 0);margin-bottom:0px;padding: top 70px;" >Loan Default Predictor</h1>
+		</div>
+			</div>
         	<div class="container">
+					
 				<div class="row">
 					<div class="col-sm-12 text wow fadeInLeftBig">
-						<h1 style="color:rgb(0, 0, 0);margin-bottom:0px;padding-top:75px;" >Loan Default Predictor</h1>
+						
 						
 					</div>
 				</div>
