--- a/templates/result.html
+++ b/templates/result.html
@@ -1,11 +1,63 @@
 <!doctype html>
 <html>
     <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Prediction Results</title>
+         <!-- CSS -->        
+         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400|Roboto:300,400,500">
+         <link rel="stylesheet" href="../static/bootstrap/css/bootstrap.min.css">
+         <link rel="stylesheet" href="../static/font-awesome/css/font-awesome.min.css">
         <link rel='stylesheet' href='../static/css/style.css'>
-        <link rel='stylesheet' href='../static/css/animate.css'
+        <link rel='stylesheet' href='../static/css/animate.css'>
+        <link rel='stylesheet' href='../static/css/style1.css'>
     </head>
     <body>
+        <!-- Top menu -->
+		<nav class="navbar navbar-inverse navbar-fixed-top navbar-no-bg" role="navigation">
+                <div class="container">
+                    <div class="navbar-header">
+                        <!-- <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#top-navbar-1">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button> -->
+                        <a class="navbar-brand" href="index.html">b Navbar Menu Template</a>
+                    </div>
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse" id="top-navbar-1">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a href="#">Documentation</a></li>
+                            <li><a href="#">Plans</a></li>
+                            <li><a href="#">Group Bio</a></li>
+                            <li><a class="btn btn-link-3" href="#">Predictor</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+
+        
+    	<!-- Top content -->
+        <div class="top-content">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-12 text wow fadeInLeftBig">
+                            <h1 id='result_output' style = "background-color:lightblue;"> {{ result }}</h1>
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
         <p id='result_output' style = background-color:lightblue> {{ result }} </p>
     </body>
+    <script src="../static/js/jquery-1.11.1.min.js"></script>
+    <script src="../static/bootstrap/js/bootstrap.min.js"></script>
+    <script src="../static/js/jquery.backstretch.min.js"></script>
+    <script src="../static/js/wow.min.js"></script>
+    <script src="../static/js/retina-1.1.0.min.js"></script>
+    <script src="../static/js/waypoints.min.js"></script>
+    <script src="../static/js/scripts.js"></script>
+    
 </html>
