Finished result page w/ photo

--- a/templates/index.html
+++ b/templates/index.html
@@ -44,7 +44,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button> -->
-					<a class="navbar-brand" href="index.html">b Navbar Menu Template</a>
+					<a class="navbar-brand" href="index.html"></a>
 				</div>
 				<!-- Collect the nav links, forms, and other content for toggling -->
 				<div class="collapse navbar-collapse" id="top-navbar-1">
@@ -62,7 +62,7 @@
         <!-- <div class="top-content"> -->
 		<div class= "containerer">
 			<img class="img-fluid" src="{{ url_for('static', filename='images/1.jpg') }}" alt="" style="width:100%;">
-			<h1 class="centereder" style="color:rgb(0, 0, 0);margin-bottom:0px;padding: top 70px;" >Loan Default Predictor</h1>
+			<h1 class="centereder" style="color:rgb(0, 0, 0);margin-bottom:0px;padding: 70px;" >Loan Default Predictor</h1>
 		</div>
 			</div>
         	<div class="container">
@@ -99,11 +99,14 @@
 									<h3 style="color:rgb(152, 147, 147);font-size:75px">About</h3>
 									
 								</div>
-								<p class="col-sm-6 wow fadeInRightBig">	Here is the into im not so good at writing it but im sure we can figure something out nom nom nom blah blah blha ksfkaj eskjfaios efmkafj ajoifj KILL ME skjfap fmj aisj eiahef jeijfa ejfiaojs fe. More blah blah blah yak yak yak yip yip yip yep yep yep nop nop book. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.
-										Ut wisi enim ad minim veniam, quis nostrud. <p>
+								<h4 class="col-sm-6 wow fadeInRightBig">Congratulations on receiving a loan</h4>
+								<p class="col-sm-6 wow fadeInRightBig">	Now you have the pleasure of paying if off :( <p>
 								<div class = "col-sm-4 wow fadeInRightBig"></div>
-								<p class = "col-sm-6 wow fadeInRightBig"> AND HERES MORE STUF BLAHH BLAHH is the into im not so good at writing it but im sure we can figure something out nom nom nom blah blah blha ksfkaj eskjfaios efmkafj ajoifj KILL ME skjfap fmj aisj eiahef jeijfa ejfiaojs fe. More blah blah blah yak yak yak yip yip yip yep yep yep nop nop book. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et.
-								Ut wisi enim ad minim veniam, quis nostrud</p>
+								<p class = "col-sm-6 wow fadeInRightBig"> While banks are legally required to be unbiased in their lending practices, predatory lending practices are not extinct. Unfortunately, individuals of lower socio-economic standing are more likely to get behind in their loan repayments. </p>
+								<div class = "col-sm-4 wow fadeInRightBig"></div>
+								<p class = "col-sm-6 wow fadeInRightBig">
+										We have developed a neural network model using TensorFlow in Python that predicts the outcome of a loan (i.e. will you pay it off or default?). This model is built from data provided by <a href="https://www.lendingclub.com/info/download-data.action">LendingClub.com</a> using over 250,000 data points.
+									</p>
 							</div>
 						</div>
 						<div class="divider-1"></div>
@@ -172,7 +175,7 @@
 
 							<hr class="my-4">
 							<div class="col">
-						  <button class="btn btnn btn-lg btn-outline-warning text-uppercase" type="submit">Sign in</button> </div>
+						  <button class="btn btnn btn-lg btn-outline-warning text-uppercase" type="submit">Predict!</button> </div>
 						  <hr class="my-4">
 						  
 						</form>
