--- a/templates/result.html
+++ b/templates/result.html
@@ -39,6 +39,27 @@
             </nav>
 
         
+            <div class= "containerer">
+                    <img class="img-fluid" src="{{ url_for('static', filename='images/1.jpg') }}" alt="" style="width:100%;">
+                    <!-- <h1 class="centereder" style="color:rgb(0, 0, 0);margin-bottom:0px;padding: top 70px;" >Loan Default Predictor</h1> -->
+                    <h1 id='result_output' class="centereder" style = "margin-bottom:0px;padding:70px;background-color:azure"> {{ result }}</h1>
+                </div>
+                    </div>
+                    <div class="container">
+                            
+                        <div class="row">
+                            <div class="col-sm-12 text wow fadeInLeftBig">
+                                
+                                
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+
     	<!-- Top content -->
         <div class="top-content">
                 <div class="container">
