lots of changes. pages now all linked together

--- a/templates/result.html
+++ b/templates/result.html
@@ -24,15 +24,13 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button> -->
-                        <a class="navbar-brand" href="index.html">b Navbar Menu Template</a>
+                        <a class="navbar-brand" href="/index"></a>
                     </div>
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="top-navbar-1">
-                        <ul class="nav navbar-nav navbar-right">
-                            <li><a href="#">Documentation</a></li>
-                            <li><a href="#">Plans</a></li>
-                            <li><a href="#">Group Bio</a></li>
-                            <li><a class="btn btn-link-3" href="#">Predictor</a></li>
+                        <ul class="nav navbar-nav navbar-left">						
+                            <li><a class="btn btn-link-3" href="/index">Predictor</a></li>
+                            <li><a href="/bio">Group Bio</a></li>
                         </ul>
                     </div>
                 </div>
@@ -60,7 +58,10 @@
 
 
 
-    	<!-- Top content -->
+        <!-- Top content -->
+        
+        <!--
+
         <div class="top-content">
                 <div class="container">
                     <div class="row">
@@ -72,6 +73,7 @@
                 </div>
             </div>
         <p id='result_output' style = background-color:lightblue> {{ result }} </p>
+         -->
     </body>
     <script src="../static/js/jquery-1.11.1.min.js"></script>
     <script src="../static/bootstrap/js/bootstrap.min.js"></script>
