--- a/templates/bios3.html
+++ b/templates/bios3.html
@@ -164,7 +164,7 @@
                 <div class="card border-0 shadow" style="padding-bottom:3%">
                     <img src="{{ url_for('static', filename='images/PM.jpg') }}" class="card-img-top" alt="Peter" style="width:300px; height:300px; padding-top:3%;">
                     <div class="card-body text-center" style="padding-bottom:1%;">
-                    <h3>Preeya</h3>
+                    <h3>Peter Myers</h3>
                     <p><strong>Age:</strong> 33</p>
                     <p><strong>Education:</strong> PhD in Movement Science</p>
                     <p><strong>Interests:</strong> Baking, running, napping</p>
