--- a/templates/result.html
+++ b/templates/result.html
@@ -40,7 +40,15 @@
             <div class= "containerer">
                     <img class="img-fluid" src="{{ url_for('static', filename='images/1.jpg') }}" alt="" style="width:100%;">
                     <!-- <h1 class="centereder" style="color:rgb(0, 0, 0);margin-bottom:0px;padding: top 70px;" >Loan Default Predictor</h1> -->
-                    <h1 id='result_output' class="centereder" style = "margin-bottom:0px;padding:70px;background-color:azure"> {{ result }}</h1>
+                        <h3 id='result_output' class="centereder" style = "margin-bottom:0px;padding:70px;background-color:azure">
+                             {{ result }}
+                             <div class="divider-1"></div>
+                             Grade: {{ grade }}
+                             <div class="divider-1"></div>
+                             Likelihood of paying off: {{ perc_paid }}%                           
+                        </h3>
+                        
+                    </div>
                 </div>
                     </div>
                     <div class="container">
